# Projekt_Mobile_Robotik

./: .gitmodules  README.md
01_Programmieraufgaben/02_Socket_Netcode/a_Server/: BuildAndStart.sh  main.cpp  server
01_Programmieraufgaben/02_Socket_Netcode/b_Client/: BuildAndStart.sh  client  main.cpp
01_Programmieraufgaben/02_Socket_Netcode/c_ServerList/: list.hpp  list.tpp  list_client  list_client.cpp  list_server  list_server.cpp  start_client.sh  start_server.sh
01_Programmieraufgaben/02_Socket_Netcode/d_Peer/: README.md  (+3 more)
01_Programmieraufgaben/03_IPC/: Makefile  README.md
02_Roboprogramm/01_miniRobo/: main.cpp  turtle_mover.cpp
02_Roboprogramm/02_Labor/: ros2ControllerBridgeLabor.py
02_Roboprogramm/02_Turtlebot4/ros2_ws/: CMakeLists.txt  Makefile
02_Roboprogramm/02_Turtlebot4/ros2_ws/install/pong_game/lib/pong_game/: pong_game
02_Roboprogramm/02_Turtlebot4/ros2_ws/install/pong_game/share/pong_game/: package.bash  package.dsv  package.ps1
02_Roboprogramm/02_Turtlebot4/ros2_ws/log/: latest_build
02_Roboprogramm/02_Turtlebot4/ros2_ws/src/: main.cpp
02_Roboprogramm/02_Turtlebot4/ros2_ws/src/classes/: CMakeLists.txt  statemachine.cpp  statemachine.hpp  terminalPub.cpp  terminalPub.hpp  turtlebot4.cpp  turtlebot4.hpp
02_Roboprogramm/02_Turtlebot4/ros2_ws/src/classes/states/: backToStartState.cpp  backToStartState.hpp  bounceState.cpp  bounceState.hpp  driveState.cpp  driveState.hpp  idleState.cpp  idleState.hpp  initState.cpp  initState.hpp
02_Roboprogramm/03_Pong/: README.md
02_Roboprogramm/03_Pong/ros2_ws/: CMakeLists.txt  Makefile
02_Roboprogramm/03_Pong/ros2_ws/install/: local_setup.sh  setup.sh
02_Roboprogramm/03_Pong/ros2_ws/install/pong_game/share/pong_game/: local_setup.sh  package.sh  package.zsh
02_Roboprogramm/03_Pong/ros2_ws/install/pong_game/share/pong_game/cmake/: pong_gameConfig.cmake
02_Roboprogramm/03_Pong/ros2_ws/log/: latest_build
02_Roboprogramm/03_Pong/ros2_ws/src/: main.cpp
02_Roboprogramm/03_Pong/ros2_ws/src/classes/: lightring.cpp  statemachine.cpp  statemachine.hpp  terminalPub.cpp
02_Roboprogramm/03_Pong/ros2_ws/src/classes/states/: backToStartState.cpp  backToStartState.hpp  bounceState.cpp  bounceState.hpp  driveState.cpp  driveState.hpp  idleState.cpp  idleState.hpp  initState.cpp  initState.hpp  state.hpp
(+35 files in other folders)
